Solves issue #108 : Swipe and Onion skin slider not showing in Firefox

--- a/webdiff/static/css/style.css
+++ b/webdiff/static/css/style.css
@@ -115,6 +115,11 @@ ul.file-list {
 .onion-skin input {
   width: 200px;
 }
+.swipe input,
+.onion-skin input {
+  background-color: transparent;
+  margin: 0;
+}
 .shrink-to-fit {
   max-width: 100%;
 }
